welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: unclosed string literal
"def haveBaggle():Boolean = {
^Program:22: error: unclosed string literal
}"
 ^Program:1: error: illegal start of definition
"def haveBaggle():Boolean = {
^Program:22: error: ';' expected but something found.
}"
 ^